syntax = "proto3";

package proto;

message User {
    string uid = 1;
    string email = 2;
    string name = 3;
    int64 lastlogin = 4;
}

message Response {
    int32 statusCode = 1;
    bool isOK = 2;
    string message = 3;
}

message LocationRequest {
    string uid = 1;
    double lat = 2;
    double lng = 3;
    int64 timestamp = 4;
}

message GetLocationRequest {
    string uid = 1;
    double sourceLat = 2;
    double sourceLng = 3;
}

message DriverDetails {
    string uid = 1;
    string email = 2;
    string name = 3;
    double driverLat = 4;
    double driverLong = 5;
    double distance = 6;
}

service DriverService {
    rpc StoreUserLogin (User) returns (Response) {
    }
    rpc UpdateLocation (LocationRequest) returns (Response) {
    }
    rpc GetDriverInLocation (GetLocationRequest) returns (DriverDetails) {
    }
}